Bug 130400 - [UI] Changing tabs/pages in dialogs with spinbuttons or treeviews doesn't work with Ctrl+PageUp/Down
Summary: [UI] Changing tabs/pages in dialogs with spinbuttons or treeviews doesn't wor...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: lowest normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0 target:6.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-02-03 17:02 UTC by Cor Nouws
Modified: 2020-03-11 15:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2020-02-03 17:02:58 UTC
Clean presentation
F11, select Outline one
Choose Modify
Click on a tab (to start in any case on a tab...)
Use Ctrl+PageUp/PageDown to move to another tab

  > gets stuck on various situations, e.g. in an edit box
    or when Highlighting is selected, next is Indents & Spacing and than
    next is Highlighting and next is Indents & Spacing and ..

Version: 6.4.0.2
Build ID: 08d19fecdc7a2298d051e19cfdb7c35544855fc3
CPU threads: 8; OS: Linux 5.3; UI render: default; VCL: gtk3; 
Locale: nl-NL (en_US.UTF-8); UI-Language: en-US
Calc: threaded

Problem doesn't appear in Writer.
Comment 1 Xisco Faulí 2020-02-18 12:00:41 UTC
I can reproduce it in

Version: 7.0.0.0.alpha0+
Build ID: 28d844a589e52abfe62dc66b888e78665221ba28
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2020-02-18 12:04:19 UTC
it's worse with gen as LibreOffice crashes going thought the tabs
Comment 3 Xisco Faulí 2020-02-18 12:06:59 UTC
actually there are 2 issues, the crash and the focus getting stuck. I'll report the crash in a follow-up bug
Comment 4 Xisco Faulí 2020-02-18 13:24:40 UTC
Regression introduced by:

commit 0e19bb2583717a0284e95f47b1094a5849dfeeaf
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Thu Oct 18 11:06:12 2018 +0100

    weld SdPresLayoutTemplateDlg
    
    Change-Id: Ifc4c9a4631e92eee4b7f9b215c41d2bcc12a17d1
    Reviewed-on: https://gerrit.libreoffice.org/61926
    Tested-by: Jenkins
    Reviewed-by: Caolán McNamara <caolanm@redhat.com>
    Tested-by: Caolán McNamara <caolanm@redhat.com>


Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 5 Caolán McNamara 2020-02-19 12:29:45 UTC
The GtkTreeView and GtkSpinButton have default bindings for ctrl+page_up and ctrl+page_down which is why they key binding doesn't go to the surrounding notebook
Comment 6 Commit Notification 2020-02-19 14:06:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/faa2e7b7227b6b87379e7e136ea9ab63f37c3fc4

Resolves: tdf#130400 reserve ctrl+page_up and ctrl+page_down for notebooks

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2020-02-24 11:29:48 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: f32a59a52e3ee2a0a8df9bb76bc1ff0ada7c7f1d
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 8 Xisco Faulí 2020-02-24 11:45:04 UTC
@Caolán, do you think it's worth it to backport it to 6-4 or better to wait for 7.0 ? I'm asking because you changed the priority to lowest.
Comment 9 Caolán McNamara 2020-02-25 20:20:25 UTC
https://gerrit.libreoffice.org/c/core/+/89481 for 6-4, needed massaging to backport
Comment 10 Commit Notification 2020-03-11 15:57:39 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/bba1c767617e38f2bafd4ba67aa1be95f47a9103

Resolves: tdf#130400 reserve ctrl+page_up and ctrl+page_down for notebooks

It will be available in 6.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.