Resolves: tdf#130400 reserve ctrl+page_up and ctrl+page_down for notebooks

Change-Id: I627298cb844967eeb1e166720e3951be732a4dc5